# qt-test-ssl

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-and-run.yml
